--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-html>
+<html>
 <head>
 	<link rel="shortcut icon" href="/beloiticon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/css/overlay.css" />
